--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+    </dependencies>
     
 </project>
